# gardenparty-2024

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  vote_results.csv
.devcontainer/: devcontainer.json
src/gardenparty/: app.py  backend.py  backend_a.py  frontend.py  models.py  preprocess.py  voting.py
src/gardenparty/old_gardenparty_prompts/: arcane.txt  atlantis.txt  augmented_reality_city.txt  bazaar.txt  cyberpunk_future.txt  elves.txt  forest.txt  hub.txt  knowledge.txt  market.txt  nature.txt  robot.txt  sanctuary.txt  travel.txt  underground.txt  urban.txt
src/gardenparty/prompt_templates/: adventure.txt  avaruus.txt  carnival.txt  celestial_bodies.txt  desert.txt  dinosaurus.txt  drawing.txt  ei_teemaa.txt  enhanced_fairytale.txt  garden.txt  halloween.txt  hyper_realistic.txt  ice.txt  joulu.txt  karnevaali.txt  kauhu.txt  luonto.txt  maaginen.txt  maalaus.txt  manor.txt  medieval_european.txt  meri.txt  merirosvo.txt  mountain.txt  muinainen_maailma.txt  musician.txt  myths.txt  neon.txt  quantum.txt  salama.txt  satumaa.txt  scifi.txt  seikkailu.txt  steam_punk.txt  steampunk.txt  sunken.txt  supersankari.txt  taide.txt  tuli.txt  utopia.txt  (+3 more)
src/gardenparty/routes/: acquire.py
src/gardenparty/static/css/: gallery.css  image-compare.css  styles.css  winner.css
src/gardenparty/static/js/: front.js  gallery.js  image-compare.js  script.js
src/gardenparty/templates/: front.html  fullscreen.html  gallery.html  image-compare.html  results.html  winner.html
